# yast-installation

./: .cvsignore  .gitignore  .rubocop.yml  .travis.yml  .yardopts  Dockerfile  MAINTAINER  Makefile.cvs  POTFILES  README.md  Rakefile  SUBDIRS  TODO  VERSION  configure.in.in  yast2-installation.spec.in
control/: .gitignore  Makefile.am  ProductFeatures  README  add-on-template_installation.xml  complete_workflow.rb  control.PERS.xml  control.PROF.xml  control.SLD.xml  control.SLED.xml  control.SLES-for-VMware.xml  control.SLES.xml  control.dtd  control.glade  control.oem-image.xml.example  control.openSUSE.xml  control.rnc  control.rng  control.xml  inst_test_workflow.rb  test.xml
control/docs/: Makefile.am  control-doc.xml  control-section.xml  control_doc.xml  update-section.xml
control/examples/: Makefile.am  add-on-1.xml  add-on-2.xml  control_default.xml  control_flex_part.xml  control_with_liveeval.xml  custom.xml
control/tests/: Makefile.am  complete_workflow.rb  complete_workflow.ycp  test.xml
doc/autodocs/: Makefile.am
doc/features/: Makefile.am  features-doc.xml  features.xml
doc/inst_images/: Makefile.am  details.xml.example  images.xml.example  inst_images.xml
general/: Makefile.am  dialogs.ycp  inst_ask_config.ycp  inst_authentication.ycp  inst_confirm_abort.ycp  inst_congratulate.ycp  inst_default_desktop.ycp  inst_doit.ycp  inst_fam.ycp  inst_features.ycp  inst_finish.ycp  inst_hw_config.ycp  inst_info.ycp  inst_licence.ycp  inst_license.ycp  inst_mode.ycp  inst_release_notes.ycp  inst_startup.ycp  inst_suseconfig.ycp  inst_welcome.ycp  installation.ycp  release_notes_popup.ycp  showlog_defines.ycp
general/include/: Makefile.am  installation_ui.ycp
proposal/: Makefile.am  hw-config-proposals-home-pc.ycp  hw-config-proposals-networked-pc.ycp  hw-config-proposals-ppc64.ycp  hw-config-proposals-s390.ycp  hw-config-proposals-sparc.ycp  hw-config-proposals.ycp  inst_proposal.ycp  installation-proposals-s390.ycp  installation-proposals.ycp  mode_proposal.ycp  net-config-proposals-ppc64.ycp  net-config-proposals-s390.ycp  net-config-proposals-sparc.ycp  net-config-proposals.ycp  proposal-API.txt  proposal_dummy.ycp  proposal_mode.ycp  proposal_software.ycp  test_proposal.ycp  update-proposals-s390.ycp  update-proposals.ycp
proposal/doc/: dummy_proposal.ycp  proposal-API-reference.xml  proposal-API-section.xml
proposal/proposals/: README  hw-config-proposals-ppc64.ycp  hw-config-proposals-s390.ycp  installation-proposals-s390.ycp  installation-proposals.ycp  net-config-proposals-s390.ycp  net-config-proposals-sparc.ycp  update-proposals-s390.ycp  update-proposals.ycp
scripts/: Makefile.am  README.scripts  YaST2  YaST2.firstboot  YaST2.sshinstall  YaST2.start  YaST2.start.debug  ask_for_TERM_variable  check.boot  inst_setup_vnc
src/: Makefile.am
src/autoyast-rnc/: deploy_image.rnc  ssh_import.rnc
src/clients/: Makefile.am  add-on.ycp  add-on_auto.ycp  add-on_proposal.ycp  auto_ssh_import.rb  automatic_configuration_finish.ycp  cio_ignore_finish.rb  cio_ignore_proposal.rb  clone_finish.rb  clone_proposal.rb  copy_files_finish.rb  copy_files_finish.ycp  copy_logs_finish.rb  copy_logs_finish.ycp  copy_systemfiles_finish.rb  copy_systemfiles_finish.ycp  deploy_image_auto.rb  deploy_image_auto.ycp  deploying_proposal.rb  deploying_proposal.ycp  desktop_finish.rb  desktop_finish.ycp  disintegrate_all_extensions.rb  disintegrate_all_extensions.ycp  driver_update1_finish.rb  driver_update1_finish.ycp  driver_update2_finish.rb  driver_update2_finish.ycp  fonts_finish.ycp  inst_add-on.ycp  inst_addon_update_sources.rb  inst_addon_update_sources.ycp  inst_ask_online_update.rb  inst_ask_online_update.ycp  inst_automatic_configuration.rb  inst_automatic_configuration.ycp  inst_casp_overview.rb  inst_check_autoinst_mode.rb  inst_check_autoinst_mode.ycp  inst_complex_welcome.rb  (+149 more)
src/config/: Makefile.am  add-on.desktop  add-on.rnc  deploy_image.desktop  preferences.yast2  release_notes.desktop  suse_register.desktop  vendor.desktop
src/desktop/: installation.desktop  org.opensuse.yast.Installation.desktop  org.opensuse.yast.ReleaseNotes.desktop  org.opensuse.yast.Upgrade.desktop  release_notes.desktop  upgrade.desktop
src/include/: Makefile.am  add-on-workflow.ycp  inst_inc_all.ycp  inst_inc_first.ycp  inst_inc_second.ycp  inst_show_info_txt.ycp  misc.ycp  scr_switch_debugger.ycp
src/inst_finish/: copy_files_finish.ycp  copy_logs_finish.ycp  copy_systemfiles_finish.ycp  driver_update1_finish.ycp  driver_update2_finish.ycp  fonts_finish.ycp  installation_settings_finish.ycp  (+13 more)
test/: Makefile.am  cio_ignore_test.rb  copy_files_finish_test.rb  copy_logs_finish_test.rb  desktop_finish_test.rb  driver_update_test.rb  file_from_url_test.rb  helpers.rb  image_installation_test.rb  inst_casp_overview_test.rb  inst_complex_welcome_test.rb  inst_disks_activate_test.rb  inst_extrasources_test.rb  inst_finish_test.rb  inst_functions.rb  inst_functions_test.rb  inst_install_inf_test.rb  inst_instsys_cleanup_client_test.rb  inst_system_analysis_test.rb  inst_update_installer_test.rb  installation_misc_test.rb  instsys_cleaner_test.rb  instsys_packages_test.rb  memsample_test.rb  old_package_check_test.rb  old_package_checker_test.rb  old_package_report_test.rb  old_package_reporter_test.rb  old_package_test.rb  prep_shrink_test.rb  product_reader_test.rb  product_sorter_test.rb  proposal_errors_test.rb  proposal_runner_test.rb  proposal_store_test.rb  remote_finish_test.rb  roles_finish_test.rb  select_system_role_test.rb  selfupdate_verifier_test.rb  services_finish_test.rb  (+15 more)
uml/: Makefile.am  UML.ycp  inst_uml_disks.ycp  inst_uml_kickoff.ycp  inst_uml_options.ycp  inst_uml_user.ycp  proposal_uml_disks.ycp  proposal_uml_options.ycp  uml.desktop  uml.ycp  uml_disks_proposal.ycp  uml_options_proposal.ycp  uml_user_proposal.ycp
update/: Makefile.am  Update.ycp  forceUpdate.ycp  inst_kernel.ycp  inst_prepost_update.ycp  inst_rootpart.ycp  inst_rpmupdate.ycp  inst_sw_backup.ycp  inst_sw_update.ycp  inst_update.ycp  inst_updateControl.ycp  inst_upgrade.ycp
(+693 files in other folders)
