#
# Makefile.am for installation/proposal
#

data_DATA = 					\
	installation-proposals.ycp		\
	hw-config-proposals-home-pc.ycp		\
	hw-config-proposals-networked-pc.ycp	\
	hw-config-proposals-sparc.ycp


client_DATA =					\
	inst_proposal.ycp			\
	proposal_mode.ycp			\
	proposal_software.ycp

doc_DATA = proposal-API.txt

EXTRA_DIST = $(client_DATA) $(data_DATA) $(doc_DATA)
