#
# Makefile.am for installation/proposal
#

ydata_DATA =					\
	installation-proposals.ycp		\
	installation-proposals-s390.ycp		\
	hw-config-proposals-ppc64.ycp		\
	hw-config-proposals-s390.ycp		\
	hw-config-proposals-sparc.ycp		\
	hw-config-proposals.ycp			\
	net-config-proposals-ppc64.ycp		\
	net-config-proposals-s390.ycp		\
	net-config-proposals-sparc.ycp		\
	net-config-proposals.ycp

client_DATA =					\
	inst_proposal.ycp			\
	proposal_mode.ycp			\
	proposal_software.ycp

doc_DATA = proposal-API.txt

EXTRA_DIST = $(client_DATA) $(ydata_DATA) $(doc_DATA)
