# Sources for installation

module_DATA = \
  modules/ImageInstallation.rb \
  modules/InstData.rb \
  modules/InstFunctions.rb \
  modules/Vendor.rb \
  modules/SystemFilesCopy.rb

client_DATA = \
  clients/cio_ignore_finish.rb \
  clients/cio_ignore_proposal.rb \
  clients/copy_files_finish.rb \
  clients/copy_logs_finish.rb \
  clients/copy_systemfiles_finish.rb \
  clients/deploy_image_auto.rb \
  clients/deploying_proposal.rb \
  clients/desktop_finish.rb \
  clients/disintegrate_all_extensions.rb \
  clients/driver_update1_finish.rb \
  clients/driver_update2_finish.rb \
  clients/inst_addon_update_sources.rb \
  clients/installation.rb \
  clients/installation_settings_finish.rb \
  clients/inst_ask_online_update.rb \
  clients/inst_casp_overview.rb \
  clients/inst_complex_welcome.rb \
  clients/inst_congratulate.rb \
  clients/inst_deploy_image.rb \
  clients/inst_disks_activate.rb \
  clients/inst_disk_for_image.rb \
  clients/inst_doit.rb \
  clients/inst_download_release_notes.rb \
  clients/inst_extrasources.rb \
  clients/inst_features.rb \
  clients/inst_finish.rb \
  clients/inst_check_autoinst_mode.rb \
  clients/inst_info.rb \
  clients/inst_initialization.rb \
  clients/inst_installation_options.rb \
  clients/inst_instsys_cleanup.rb \
  clients/inst_keyboard_root_password.rb \
  clients/inst_license.rb \
  clients/inst_network_check.rb \
  clients/inst_new_desktop.rb \
  clients/inst_pre_install.rb \
  clients/inst_prepare_image.rb \
  clients/inst_prepareprogress.rb \
  clients/inst_proposal.rb \
  clients/inst_release_notes.rb \
  clients/inst_restore_settings.rb \
  clients/inst_rpmcopy_secondstage.rb \
  clients/inst_save_hardware_status.rb \
  clients/inst_scenarios.rb \
  clients/inst_ssh_import.rb \
  clients/inst_system_analysis.rb \
  clients/inst_system_role.rb \
  clients/inst_upgrade_urls.rb \
  clients/inst_update_installer.rb \
  clients/inst_welcome.rb \
  clients/inst_worker_continue.rb \
  clients/inst_worker_initial.rb \
  clients/kernel_finish.rb \
  clients/ldconfig_finish.rb \
  clients/network_finish.rb \
  clients/pre_umount_finish.rb \
  clients/prep_shrink_finish.rb \
  clients/proxy_finish.rb \
  clients/remote_finish.rb \
  clients/roles_finish.rb \
  clients/save_config_finish.rb \
  clients/save_hw_status_finish.rb \
  clients/services_finish.rb \
  clients/snapshots_finish.rb \
  clients/ssh_import_proposal.rb \
  clients/ssh_import_auto.rb \
  clients/ssh_settings_finish.rb \
  clients/stroj-casu.rb \
  clients/switch_scr_finish.rb \
  clients/test_inst_client.rb \
  clients/test_proposal.rb \
  clients/umount_finish.rb \
  clients/update_wizard_steps.rb \
  clients/x11_finish.rb \
  clients/yast_inf_finish.rb

yncludedir = @yncludedir@/installation
ynclude_DATA = \
  include/installation/inst_inc_second.rb \
  include/installation/inst_inc_first.rb \
  include/installation/misc.rb \
  include/installation/inst_inc_all.rb

scrconf_DATA = \
  scrconf/cfg_boot.scr \
  scrconf/cfg_windowmanager.scr \
  scrconf/cfg_fam.scr \
  scrconf/etc_install_inf_options.scr \
  scrconf/etc_passwd.scr \
  scrconf/etc_install_inf_alias.scr \
  scrconf/etc_install_inf.scr \
  scrconf/run_df.scr

schemafilesdir = $(schemadir)/autoyast/rnc
schemafiles_DATA = \
  autoyast-rnc/deploy_image.rnc \
  autoyast-rnc/ssh_import.rnc

desktop_DATA = \
  desktop/release_notes.desktop

fillup_DATA = \
  fillup/sysconfig.security-checksig

ylibdir = "${yast2dir}/lib/installation"
ylib_DATA = \
  lib/installation/cio_ignore.rb \
  lib/installation/copy_logs_finish.rb \
  lib/installation/driver_update.rb \
  lib/installation/instsys_cleaner.rb \
  lib/installation/minimal_installation.rb \
  lib/installation/prep_shrink.rb \
  lib/installation/proposal_runner.rb \
  lib/installation/proposal_store.rb \
  lib/installation/proposal_errors.rb \
  lib/installation/remote_finish_client.rb \
  lib/installation/select_system_role.rb \
  lib/installation/snapshots_finish.rb \
  lib/installation/updates_manager.rb \
  lib/installation/update_repository.rb \
  lib/installation/services.rb \
  lib/installation/ssh_config.rb \
  lib/installation/ssh_key.rb \
  lib/installation/ssh_config_file.rb \
  lib/installation/ssh_importer_presenter.rb \
  lib/installation/ssh_importer.rb

ylibtransferdir = "${yast2dir}/lib/transfer"
ylibtransfer_DATA = \
  lib/transfer/file_from_url.rb

ylibclientdir = "${yast2dir}/lib/installation/clients"
ylibclient_DATA = \
  lib/installation/clients/copy_files_finish.rb \
  lib/installation/clients/copy_systemfiles_finish.rb \
  lib/installation/clients/deploy_image_auto.rb \
  lib/installation/clients/deploying_proposal.rb \
  lib/installation/clients/desktop_finish.rb \
  lib/installation/clients/disintegrate_all_extensions.rb \
  lib/installation/clients/driver_update1_finish.rb \
  lib/installation/clients/driver_update2_finish.rb \
  lib/installation/clients/inst_addon_update_sources.rb \
  lib/installation/clients/installation.rb \
  lib/installation/clients/installation_settings_finish.rb \
  lib/installation/clients/inst_ask_online_update.rb \
  lib/installation/clients/inst_casp_overview.rb \
  lib/installation/clients/inst_complex_welcome.rb \
  lib/installation/clients/inst_congratulate.rb \
  lib/installation/clients/inst_deploy_image.rb \
  lib/installation/clients/inst_disk_for_image.rb \
  lib/installation/clients/inst_disks_activate.rb \
  lib/installation/clients/inst_doit.rb \
  lib/installation/clients/inst_download_release_notes.rb \
  lib/installation/clients/inst_extrasources.rb \
  lib/installation/clients/inst_features.rb \
  lib/installation/clients/inst_finish.rb \
  lib/installation/clients/inst_check_autoinst_mode.rb \
  lib/installation/clients/inst_info.rb \
  lib/installation/clients/inst_initialization.rb \
  lib/installation/clients/inst_installation_options.rb \
  lib/installation/clients/inst_instsys_cleanup_client.rb \
  lib/installation/clients/inst_keyboard_root_password.rb \
  lib/installation/clients/inst_license.rb \
  lib/installation/clients/inst_network_check.rb \
  lib/installation/clients/inst_new_desktop.rb \
  lib/installation/clients/inst_pre_install.rb \
  lib/installation/clients/inst_prepare_image.rb \
  lib/installation/clients/inst_prepareprogress.rb \
  lib/installation/clients/inst_release_notes.rb \
  lib/installation/clients/inst_restore_settings.rb \
  lib/installation/clients/inst_rpmcopy_secondstage.rb \
  lib/installation/clients/inst_save_hardware_status.rb \
  lib/installation/clients/inst_scenarios.rb \
  lib/installation/clients/inst_system_analysis.rb \
  lib/installation/clients/inst_update_installer.rb \
  lib/installation/clients/inst_upgrade_urls.rb \
  lib/installation/clients/inst_welcome.rb \
  lib/installation/clients/inst_worker_continue.rb \
  lib/installation/clients/inst_worker_initial.rb \
  lib/installation/clients/kernel_finish.rb \
  lib/installation/clients/ldconfig_finish.rb \
  lib/installation/clients/network_finish.rb \
  lib/installation/clients/pre_umount_finish.rb \
  lib/installation/clients/proxy_finish.rb \
  lib/installation/clients/roles_finish.rb \
  lib/installation/clients/save_config_finish.rb \
  lib/installation/clients/save_hw_status_finish.rb \
  lib/installation/clients/services_finish.rb \
  lib/installation/clients/ssh_import_proposal.rb \
  lib/installation/clients/ssh_settings_finish.rb \
  lib/installation/clients/stroj-casu.rb \
  lib/installation/clients/switch_scr_finish.rb \
  lib/installation/clients/test_inst_client.rb \
  lib/installation/clients/test_proposal.rb \
  lib/installation/clients/umount_finish.rb \
  lib/installation/clients/update_wizard_steps.rb \
  lib/installation/clients/x11_finish.rb \
  lib/installation/clients/ssh_import_auto.rb \
  lib/installation/clients/yast_inf_finish.rb

ylibdialogdir = "${yast2dir}/lib/installation/dialogs"
ylibdialog_DATA = \
  lib/installation/dialogs/ssh_import.rb

ylibwidgetdir = "${yast2dir}/lib/installation/widgets"
ylibwidget_DATA = \
  lib/installation/widgets/overview.rb \
  lib/installation/widgets/system_role.rb

ylibcfadir = "${yast2dir}/lib/installation/cfa"
ylibcfa_DATA = \
  lib/installation/cfa/salt.rb


EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(schemafiles_DATA) $(desktop_DATA) $(fillup_DATA) $(ylibdialog_DATA) $(ylib_DATA) $(ylibtransfer_DATA) $(ylibcfa_DATA)

include $(top_srcdir)/Makefile.am.common
