TESTS = \
  inst_functions_test.rb \
  installation_misc_test.rb \
  image_installation_test.rb \
  cio_ignore_test.rb \
  copy_logs_finish_test.rb \
  prep_shrink_test.rb \
  proposal_store_test.rb \
  proposal_runner_test.rb \
  remote_finish_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)
