TESTS = \
  inst_extrasources_test.rb \
  inst_functions_test.rb \
  inst_finish_test.rb \
  inst_instsys_cleanup_client_test.rb \
  inst_complex_welcome_test.rb \
  instsys_cleaner_test.rb \
	inst_update_installer_test.rb \
  installation_misc_test.rb \
  image_installation_test.rb \
  cio_ignore_test.rb \
  copy_logs_finish_test.rb \
	driver_update_test.rb \
	file_from_url_test.rb \
  prep_shrink_test.rb \
  proposal_errors_test.rb \
  proposal_store_test.rb \
  proposal_runner_test.rb \
  remote_finish_test.rb \
  select_system_role_test.rb \
  services_test.rb \
  snapshots_finish_test.rb \
  ssh_import_auto_test.rb \
  updates_manager_test.rb \
  update_repository_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)
