#
# Makefile.am for update
#

module_DATA = \
	Update.ycp

ydata_DATA = \
	forceUpdate.ycp

client_DATA = \
	inst_sw_backup.ycp			\
	inst_sw_update.ycp			\
	inst_rpmupdate.ycp			\
	inst_updateControl.ycp			\
	inst_update.ycp				\
	inst_upgrade.ycp			\
	inst_kernel.ycp				\
	inst_prepost_update.ycp			\
	inst_rootpart.ycp

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ydata_DATA)
