#
# Makefile.am for installation/modules
#

module_DATA =			\
	InstShowInfo.ycp	\
	Installation.ycp	\
	Product.ycp		\
	GetInstArgs.ycp		\
	Vendor.ycp		\
	Hotplug.ycp		\
	HwStatus.ycp		\
	X11Version.ycp		\
	Register.ycp		\
	SourceManager.ycp	\
	InstURL.ycp		\
	CheckMedia.ycp		\
	ProductLicense.ycp	\
	AddOnProduct.ycp	\
	SystemFilesCopy.ycp

EXTRA_DIST = $(module_DATA)

include $(top_srcdir)/Makefile.am.common
